# Lexarb-components

./: .gitignore  README.md  docker-compose.yml  requirements.txt
alembic/versions/: 001_create_summary_tables.py
app/api/: deps.py
app/core/: config.py  email.py
app/middleware/: document_validation.py
app/models/: case.py  document.py
app/schemas/: document.py
app/services/: case_filing_service.py  document_processor.py  document_request.py  email_service.py
backend/: .env.example  pyproject.toml
backend/app/core/: config.py
backend/docker/: development.dockerfile
backend/src/pipelines/: __init__.py
backend/src/pipelines/ai_etl/: __init__.py  services.py
backend/src/pipelines/award/: __init__.py  models.py
backend/src/pipelines/case_filing/: __init__.py  services.py
backend/src/pipelines/document_request/: __init__.py
backend/tests/: conftest.py  test_ai_etl.py  test_award.py  test_case_filing.py  test_document_request.py  test_mock_case.py
backend/tests/mock_data/: techvision_case.json  techvision_case.py
frontend/: Dockerfile
models/: award.py
services/: award_pipeline.py  template_engine.py
src/api/routes/: summarization.py
src/pipelines/ai_etl/: __init__.py  categorizer.py  config.py  exceptions.py  models.py  pipeline.py  (+2 more)
templates/awards/: base_award.j2
tests/: test_ai_etl.py  test_award.py  test_case_filing.py  test_document_request.py
tests/api/: test_document_requests.py
tests/middleware/: test_document_validation.py
tests/services/: test_award_pipeline.py  test_document_processor.py  test_document_request.py
(+19 files in other folders)
